--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ html {
     --accent-color: #4D5AE5;
     --primary-white-color: #ffffff;
     --hover-color: #404BBF;
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -84,19 +85,20 @@ body {
     font-weight: 500;
     color: var(--title-text-color);
     text-decoration: none;
-
+    position: relative;
 }
 
-/* .site-nav-item::after {
+.active::after {
     content: '';
-    width: 67px;
+    width: 100%;
     height: 4px;
     background-color: #404BBF;
     border-radius: 2px;
     display: block;
-    margin-top: 24px;
-    
-} */
+    position: absolute;
+    /* bottom: 35px; */
+    top: 43px;
+}
 
 .link-nav:hover, .link-nav:focus {
     color: var(--hover-color)
